Java 11, Maven and test passed.